--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Basic back end twitter clone using express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "start:watch": "nodemon server.js",
+    "test": "jest --verbose --runInBand",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
